--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ and open the template in the editor.
                         The university was ranked 89 among universities in India by the National
                         Institutional Ranking Framework
                         (NIRF) in 2018,[5] in the 101–150 band overall[4] and 72 
-                        in the engineering rankings</p>
+                        in the engineering rankings></p>
             </div>
         </section>
         <section class="tb">
